* Fixed Sonarqube issues